<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >

        <!--  Title -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/title_register"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Username -->

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_username"
            android:inputType="text" />

        <!-- Email -->

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_email"
            android:inputType="textEmailAddress" />

        <!-- Password -->

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_password"
            android:inputType="textPassword" />

        <!-- Error message -->

        <TextView
            android:id="@+id/msgField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:textColor="#FF0000"
            android:textStyle="bold" />

        <!-- Register Button -->
            
        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="registerUser"
            android:text="@string/button_register" />

        <!-- Login Button -->

        <Button
            android:id="@+id/goToLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="goToLogin"
            android:text="@string/title_login" />
    </LinearLayout>

</ScrollView>